litmask/tests/compile/mask_include_bytes_missing_file.stderr
error: mask_include_bytes!: could not read `examples/fixtures/this_file_does_not_exist.bin`: No such file or directory (os error 2)
 --> tests/compile/mask_include_bytes_missing_file.rs:8:33
  |
8 |     let _ = mask_include_bytes!("examples/fixtures/this_file_does_not_exist.bin");
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
